<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Video Player</string>
    <string name="material_music_player">Music Player</string>
    <string name="more_apps">More Apps</string>
    <string name="share_desc">Watch your movies and videos with HD Video Player for Android.</string>
    <string name="share">Share</string>
    <string name="feedback_desc">Help us improve Video Player</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_desc">Open source libs used by Video Player</string>
    <string name="faq_desc">Frequently Asked Questions</string>
    <string name="faq_link" translatable="false">&lt;a href=&quot;https://www.videolan.org/vlc/&quot;&gt;https://www.videolan.org/vlc/&lt;/a&gt;</string>
    <string name="privacy_desc">Know how we use your data</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_subtitle">A Complete Music and Video Player</string>
    <string name="policy_heading">Privacy Policy</string>
    <string name="policy_blog_1">Your privacy is important to us. We hope this privacy statement will help you to understand how we
    deal with your personal identifiable information( \'PII\' ) that you may occasionally provide to us via Internet(the \'Google Play\' Platform).
    </string>
    <string name="policy_blog_2">Generally, we do not collect any PII from you when you download our Android Applications.We do not require
    any user registration, nor do we keep the track of user\'s visit of our application. We do not store any PII to servers, because we don\'t have such servers.</string>
    <string name="policy_blog_3">HD Video Player uses Facebook and Google Admob as ads provider.Facebook and Google Admob wants to show
    ads that are relevant to you.For more information please check:</string>
    <string name="fb_policy_link" translatable="false">https://www.facebook.com/about/ads</string>
    <string name="admob_policy_link" translatable="false">https://policies.google.com/privacy</string>
    <string name="policy_blog_4">The only Situation where we may get access to your PII is when you personally decide to mail us for feedback or bug report.These PII are strictly limited
    to your name, email, address only.</string>
    <string name="policy_blog_5">We never use your information (e.g. your name and email address) for any other purpose, such as market our products or disclose your personal information to third party, we only use this for contacting you and improving
    our services.</string>
    <string name="policy_blog_6">It should be noted that whether or not to send us your feedback or bug report
    is completely your decision. If you have a concern about your PII being misused,or if you want any information about
    our privacy policy, please feel free to drop us a mail at goldsmineapps@gmail.com, we will answere your questions in a timely manner.</string>
    <string name="feedback">Feedback</string>
    <string name="chromcast_faq">Chromcast FAQ</string>
    <string name="faq">FAQ</string>
    <string name="rate_us">Rate Us</string>
    <string name="desc_rate_us">Enjoying videos using Video Player. Do you want to rate us on Google Play?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_name_desc">Name (desc)</string>
    <string name="sortby_filename">File name</string>
    <string name="sortby_filename_desc">File name (desc)</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_artist_name_desc">Artist name (desc)</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_album_name_desc">Album name (desc)</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_length_desc">Length (desc)</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_date_desc">Date (desc)</string>
    <string name="sortby_last_modified_date">Recently added</string>
    <string name="sortby_last_modified_date_desc">Recently added (desc)</string>
    <string name="sortby_number">Nb tracks</string>
    <string name="sortby_number_desc">Nb tracks (desc)</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="playback_controls">Playback controls</string>
    <string name="medialibrary_scan">Media library scan</string>
    <string name="Medialibrary_progress">Media library scanning progress updates</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="video_app_switch_title">Background/PiP mode</string>
    <string name="video_app_switch_summary">Select Video Player behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="resume_playback_short">Resume playback</string>
    <string name="resume_playback_long"> Resume playback of last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="set_song_question">Set \'%1$s\' as ringtone?</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_several_media">Delete these %1$d media?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_playlist">Delete playlist \'%1$s\'?</string>
    <string name="confirm_remove_from_playlist">Remove \'%1$s\' from playlist?</string>
    <string name="confirm_remove_from_playlist_anonymous">Remove from playlist?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="info_title">Video Player</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_number">Unknown number of Tracks</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="noplaylist">No playlist found.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">The directory path \'%1$s\' was not found.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle_all_title">Shuffle all</string>
    <string name="shuffle_title">Shuffle mode</string>
    <string name="shuffle">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="repeat_title">Repeat mode</string>
    <string name="repeat">Repeat none</string>
    <string name="repeat_single">Repeat single</string>
    <string name="repeat_all">Repeat all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="firstsong">First song of the playlist</string>
    <string name="lastsong">Last song of the playlist</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="brightness">Brightness</string>
    <string name="navmenu">navigation menu</string>
    <string name="advanced">advanced options</string>
    <string name="audio_boost_warning">Slide up again to go beyond 100%</string>
    <string name="locked_in_portrait_mode">Locked in portrait mode\n(Long press on button to cancel)</string>
    <string name="locked_in_landscape_mode">Locked in landscape mode\n(Long press on button to cancel)</string>
    <string name="reset_orientation">Orientation reset</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
</resources>